started working on searchbar and added magnifying glass

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
     <link href="/dist/output.css" rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/d56d941b75.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
